[package]
name = "playground"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "playground"
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
test-bpf = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-client = "1.18.22"
solana-program = "1.18.22"
solana-sdk = "1.18.22"
solana-program-test = { path = "../../../../blueprint/solana/program-test" }